Learning other Concepts

--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -17,7 +17,11 @@
       </form>
     </div>
   </nav>
-    <h1>Welcome to our Receipe website</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, iure.</p>
+
+  <div class="container">
+    <h1>This is to send Email</h1>
+    <a href="{% url 'send_email' %}" class="btn btn_success">Send Email</a>
+  </div>
+
 </body>
 </html>
