--- a/receipes/templates/recep.html
+++ b/receipes/templates/recep.html
@@ -74,7 +74,7 @@
               </td>
               <td>
                 <a href="/delete-receipe/{{ i.id }}" class = "btn btn-danger m-2">Delete</a>
-                <a href="/update-receipe/{{ i.id }}" class = "btn btn-success">Update</a>
+                <a href="/update-receipe/{{ i.slug }}" class = "btn btn-success">Update</a>
               </td>
             </tr>
             {% endfor %}
